# my-claude

./: .gitignore  history.jsonl  settings.json
agents/: docx-validator.md  pdf-validator.md  pptx-validator.md  skill-creator.md  xlsx-validator.md
chrome/: chrome-native-host
commands/: archive-project-todo.md  commit.md  create-project-todo.md  review-staged.md  worktree-dev.md  worktree.md
office-deps/: pyproject.toml
plans/: bright-zooming-fiddle.md  cached-swinging-hanrahan.md  cozy-purring-zebra.md  curious-floating-graham.md  dazzling-gliding-conway.md  fancy-coalescing-cocoa.md  fuzzy-inventing-koala.md  jiggly-crunching-hippo.md  mellow-sparking-axolotl.md  mighty-kindling-kay.md  pure-meandering-twilight.md  recursive-napping-fiddle.md  reflective-launching-horizon.md  splendid-pondering-cookie.md  twinkly-strolling-crab.md  typed-enchanting-quiche.md  virtual-noodling-rossum.md
plugins/: installed_plugins.json  known_marketplaces.json
rules/: claude-md-auto-update.md  directory-structure.md  naming-convention.md  office-files.md
skills/archive-project-todo-skill/: SKILL.md
skills/commit/: SKILL.md
skills/commit-global/: SKILL.md
skills/commit-skill/: SKILL.md
skills/create-clerk-user-skill/: SKILL.md
skills/create-project-todo-skill/: SKILL.md
skills/diagnose/: SKILL.md
skills/docx/: SKILL.md
skills/docx-skill/: SKILL.md
skills/issue/: SKILL.md
skills/pdf/: SKILL.md
skills/pptx/: SKILL.md
skills/pptx-skill/: SKILL.md
skills/requirement/: SKILL.md
skills/review-changes/: SKILL.md
skills/save-auth-skill/: SKILL.md
(+32 files in other folders)
