[project]
name = "claude-office-skills"
version = "1.0.0"
description = "Office 文件转换工具，用于 Claude Code 读取 docx/xlsx/pptx"
requires-python = ">=3.10,<3.14"
dependencies = [
    "markitdown[all]",
    "openpyxl>=3.1.0",
    "pdf2image>=1.16.0",
    "Pillow>=10.0.0",
    "pymupdf4llm>=0.0.17",
    "openai-whisper>=20231117",
]
